--- a/README
+++ b/README
@@ -1,21 +1,16 @@
-I did readelf while understanding so the code is really messy i'll try to fix it by sunday.
+MyLDSO
+======
 
-The VDSO is loaded but I didn't adapt my libc so I don't think it is of any use.
+An optional project from *EPITA*.
 
-LD_LIBRARY_PATH, rpath, LD_PRELOAD are implemented.
-DT_GNU_HASH resolution should work.
+[x] readelf (Really messy I was understanding the concepts while doing them)
+[x] LD_LIBRARY_PATH
+[x] LD_PRELOAD
+[x] DT_GNU_HASH - DT_HASH
+[x] BIND_NOW
+[x] LAZY_BIND
+[x] X86_64 relocations
 
-Basic and most common X86_64 relocations are handled.
-
-BIND_NOW behavior is implemented, LAZY bind too, it took a lot of reading but
-thanks to the openbsd-source I have something working.
-
-I really wanted to do libdl because I was really curious about what actual use 
-it could have. dlopen and dlsym should work properly, I could not go further.
-
-DT_DEBUG was also and intresting feature but I didn't manage to make it work in
-the remaining time frame.
-
-I would have liked doing other types of executable but overall I lost way too much time.
 
 Some of the code i'm actually proud of but if I had to do it again I'd do a lot differently.
+Overall had a lot of fun on this project. 
